--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -13,6 +13,8 @@
     </form>
 
     <div class="navbar-wagon-item">
+      <a href="contact.html" class="navbar-wagon-item navbar-wagon-link">Team</a>
+
       <a href="" class="navbar-wagon-button btn btn-default">Post stuff</a>
     </div>
 
