--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,137 @@
----
-title: Le Wagon Middleman boilerplate
----
 
-<div class="welcome text-center padded">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<div class="banner text-center" style="background-image: url('https://unsplash.com/photos/9dI3g8owHiI/download')">
+      <div class="banner-shadow">
+      </div>
+      <div class="banner-content fade-and-slide">
+        <h1>Anna Mimouni</h1>
+        <p>#Fullstack designer</p>
+        <% link_to "http://www.annamimouni.com", class: "btn btn-primary btn-lg" do %>GET A BETTER DESIGN
+        <% end %>
+      </div>
+</div>
+<div class="feature">
+  <div class="feature">
+    <h2>
+      <%= image_tag "mobile.png" %>
+      Conceptualize
+    </h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores sequi sed, odit tenetur? Necessitatibus ad nulla deleniti quis vel facere hic illum omnis expedita beatae aliquam quibusdam asperiores laborum, magni.
+    </p>
+  </div>
+
+</div>
+<div class="feature">
+  <h2>
+  <%= image_tag "mobile.png" %>
+    Design
+
+  </h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea officia beatae, repellendus eveniet alias vel laboriosam, necessitatibus error cum asperiores facere aliquam consectetur ad impedit molestiae, harum? Vel, quidem, sit.
+  </p>
+</div>
+<div class="feature">
+  <h2>
+    <%= image_tag "search.png" %>
+    Develop
+  </h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis optio adipisci minus vero voluptatum soluta corporis alias ut commodi non quaerat quasi reprehenderit sit dolore nulla qui cum explicabo, possimus.
+  </p>
+</div>
+<div class="feature">
+  <h2>
+    <%= image_tag "heart.png" %>
+    Iterate
+  </h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ab cumque delectus, reiciendis fugit molestiae totam obcaecati exercitationem illum amet, recusandae, odio est. Repudiandae sapiente provident, sint reprehenderit necessitatibus, magni.
+  </p>
+  </div>
+
+<!-- Cards -->
+
+<div class="padded">
+  <h2 class="section-header text-center">Most popular</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" data-sr="enter bottom and scale up 20% over 1s">
+          <span class="card-bg" style="background-image: url('http://unsplash.it/500/300/?image=0')"></span>
+          <span class="card-shadow"></span>
+          <span class="card-description">Popular</span>
+          <span class="card-text">
+            <h2>Trello</h2>
+            <p>Very cool stuff, useful and smart</p>
+          </span>
+          <span class="card-user">
+            <img src='http://placehold.it/50x50' class="avatar avatar-bordered"/>
+          </span>
+          <a href="#" class="card-link"></a>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" data-sr="enter bottom and scale up 20% over 1s">
+          <span class="card-bg" style="background-image: url('http://unsplash.it/500/300/?image=1')"></span>
+          <span class="card-shadow"></span>
+          <span class="card-description">Popular</span>
+          <span class="card-text">
+            <h2>Intercom</h2>
+            <p>Very cool stuff, useful and smart</p>
+          </span>
+          <span class="card-user">
+            <img src='http://placehold.it/50x50' class="avatar avatar-bordered"/>
+          </span>
+          <a href="#" class="card-link"></a>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" data-sr="enter bottom and scale up 20% over 1s">
+          <span class="card-bg" style="background-image: url('http://unsplash.it/500/300/?image=2')"></span>
+          <span class="card-shadow"></span>
+          <span class="card-description">Popular</span>
+          <span class="card-text">
+            <h2>Mixpanel</h2>
+            <p>Very cool stuff, useful and smart</p>
+          </span>
+          <span class="card-user">
+            <img src='http://placehold.it/50x50' class="avatar avatar-bordered"/>
+          </span>
+          <a href="#" class="card-link"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="padded-bottom text-center">
+  <h2 class="section-header">A sample of cool products</h2>
+  <div class="carousel">
+    <div>
+      <img src="http://unsplash.it/500/300?image=0" alt="">
+    </div>
+    <div>
+      <img src="http://unsplash.it/500/300?image=1" alt="">
+    </div>
+    <div>
+      <img src="http://unsplash.it/500/300?image=2" alt="">
+    </div>
+  </div>
+</div>
+
+<div class="text-center padded-bottom" id="newsletter">
+  <h2 class="section-header">Get news from us</h2>
+  <p>Leave us your mail and get stylus news</p>
+  <form class="form-inline">
+    <input type="email" placeholder="bob@gmail.com" class="form-control">
+    <input type="submit" value="Subscribe" class="btn btn-primary btn-bordered btn-bordered-primary">
+  </form>
+</div>
+
+<div id="map" style="width: 100%;height: 300px;"></div>
+
+
+
+
+
